gateway-api-training/code/tag09/lb-test.yaml
# Wegwerf-Service zum Testen von LB-IPAM + L2 (Drill 2)
apiVersion: v1
kind: Service
metadata:
  name: lb-test
  namespace: default
spec:
  type: LoadBalancer
  selector: {app: does-not-exist}
  ports:
    - {port: 80, targetPort: 80}
